MDEV-13023 mariabackup does not preserve holes for page compressed tables.
Changed "local" datasink logic to detect page compressed Innodb tables.

Whenever such table is detected, holes in the copied files are created by
skipping over binary zeros at the end of each compressed page.

--- a/extra/mariabackup/CMakeLists.txt
+++ b/extra/mariabackup/CMakeLists.txt
@@ -61,7 +61,7 @@ MYSQL_ADD_EXECUTABLE(mariabackup
   datasink.c
   ds_buffer.c
   ds_compress.c
-  ds_local.c
+  ds_local.cc
   ds_stdout.c
   ds_tmpfile.c
   ds_xbstream.c
@@ -98,7 +98,7 @@ ENDIF()
 ########################################################################
 MYSQL_ADD_EXECUTABLE(mbstream
   ds_buffer.c
-  ds_local.c
+  ds_local.cc
   ds_stdout.c
   datasink.c
   xbstream.c
@@ -112,6 +112,7 @@ TARGET_LINK_LIBRARIES(mbstream
   mysys
   crc
 )
+ADD_DEPENDENCIES(mbstream GenError)
 
 IF(MSVC)
   SET_TARGET_PROPERTIES(mbstream PROPERTIES LINK_FLAGS setargv.obj)
